meja/tests/row-expression-missing-args.meja
let x : [< `A(int) | `B | `C > `A] = `A;
